--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,14 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: "antlr"
 apply plugin: "application"
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 mainClassName = "f2.MainKt"
 
@@ -57,3 +59,7 @@ generateGrammarSource {
 }
 
 compileKotlin.dependsOn generateGrammarSource
+
+junitPlatform {
+    enableStandardTestTask true
+}
